--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 {this.value = '全文检索'; this.style.color = '#999'}"
                 
                 >
-                <input id="but" type="image" src="https://www.tjcu.edu.cn/images/sousuo.jpg">
+                <input id="but" type="image" src="./img/sousuo.jpg">
             </div>
 
         </div>
         <div class="nav">
             <a href="https://www.tjcu.edu.cn">
-                <img src="https://www.tjcu.edu.cn/dfiles/11305/themes/11882/tjcu2017/assets/img/logo-tjcu.png">
+                <img src="./img/logo-tjcu.png">
             </a>
             <div class="nav-right">
                 <ul class="nav-text">
@@ -46,25 +46,25 @@
         <div class="slider">
             <ul class="sliderList">
                 <li>
-                    <img style="display: block;" class="sliderImg" src="https://www.tjcu.edu.cn/images/shijiujiewuzhong.jpg">
+                    <img style="display: block;" class="sliderImg" src="./img/shijiujiewuzhong.jpg">
                 </li>
                 <li>
-                    <img class="sliderImg" src="https://www.tjcu.edu.cn/images/xzgs.jpg">
+                    <img class="sliderImg" src="./img/xzgs.jpg">
                 </li>
                 <li>
-                    <img class="sliderImg" src="https://www.tjcu.edu.cn/images/kangyijingshen.jpg">
+                    <img class="sliderImg" src="./img/kangyijingshen.jpg">
                 </li>
                 <li>
-                    <img class="sliderImg" src="https://www.tjcu.edu.cn/images/zxls.jpg">
+                    <img class="sliderImg" src="./img/zxls.jpg">
                 </li>
                 <li>
-                    <img class="sliderImg" src="https://www.tjcu.edu.cn/images/20200701qiyi99zhounian.jpg">
+                    <img class="sliderImg" src="./img/20200701qiyi99zhounian.jpg">
                 </li>
                 <li>
-                    <img class="sliderImg" src="https://www.tjcu.edu.cn/images/tsjs.jpg">
+                    <img class="sliderImg" src="./img/tsjs.jpg">
                 </li>
                 <li>
-                    <img class="sliderImg" src="https://www.tjcu.edu.cn/images/20200107.1.jpg">
+                    <img class="sliderImg" src="./img/20200107.1.jpg">
                 </li>
             </ul>
         </div>
@@ -75,7 +75,7 @@
             </div>
             <div class="imgList">
                 <a href="https://www.tjcu.edu.cn/info/1097/17040.htm" target="_blank">
-                    <img src="https://www.tjcu.edu.cn/__local/5/9C/16/A982FFCE025386C18DD3AACB139_13684180_44CCB.jpg">
+                    <img src="./img/A982FFCE025386C18DD3AACB139_13684180_44CCB.jpg">
                 </a>
                 <div class="imgTextDiv">
                     <a class="imgText" href="https://www.tjcu.edu.cn/info/1097/17040.htm" target="_blank">共青团天津商业大学第二次代表大会隆重召开</a>
@@ -84,7 +84,7 @@
             </div>
             <div class="imgList">
                 <a href="https://www.tjcu.edu.cn/info/1097/16992.htm" target="_blank">
-                    <img src="https://www.tjcu.edu.cn/__local/A/F6/A1/363CC128343ED885A8501F2BB8A_AD97967C_3CC4E.jpg" alt="">
+                    <img src="./img/363CC128343ED885A8501F2BB8A_AD97967C_3CC4E.jpg" alt="">
                 </a>
                 <div class="imgTextDiv">
                     <a class="imgText" href="https://www.tjcu.edu.cn/info/1097/16992.htm" target="_blank">天津商业大学第二届教职工代表大会暨第二次工会会员代表大会隆重召开</a>
@@ -93,7 +93,7 @@
             </div>
             <div class="imgList">
                 <a href="https://www.tjcu.edu.cn/info/1097/16967.htm" target="_blank">
-                    <img src="https://www.tjcu.edu.cn/__local/9/78/76/809F84657787D34A145F9D82EEC_E448584F_B30F9.png" alt="">
+                    <img src="./img/809F84657787D34A145F9D82EEC_E448584F_B30F9.png" alt="">
                 </a>
                 <div class="imgTextDiv">
                     <a class="imgText" href="https://www.tjcu.edu.cn/info/1097/16967.htm" target="_blank">学习强国平台、《天津教育报》报道我校结对帮扶困难村工作开展成效</a>
@@ -184,10 +184,10 @@
                         <a href="https://www.tjcu.edu.cn/index/tpxw.htm" target="_blank">更多>></a>
     
                     </div>
-                    <span style="margin-left: 0px; background: url('https://www.tjcu.edu.cn/images/zhzx.png') no-repeat; background-size: 190px 113px;" class="lImg"></span>
-                    <span style="background: url('https://www.tjcu.edu.cn/images/20200512_2.jpg') no-repeat; background-size: 190px 113px;" class="lImg"></span>
-                    <span style="background: url('https://www.tjcu.edu.cn/images/18/04/10/12x7zb621w/99893.png') no-repeat; background-size: 190px 113px;" class="lImg"></span>
-                    <span style="margin-right: 0px; background: url('https://www.tjcu.edu.cn/images/18/04/10/12x7zb621w/102422.png') no-repeat; background-size: 190px 113px;"  class="lImg"></span>
+                    <span style="margin-left: 0px; background: url('./img/zhzx.png') no-repeat; background-size: 190px 113px;" class="lImg"></span>
+                    <span style="background: url('./img/20200512_2.jpg') no-repeat; background-size: 190px 113px;" class="lImg"></span>
+                    <span style="background: url('./img/99893.png') no-repeat; background-size: 190px 113px;" class="lImg"></span>
+                    <span style="margin-right: 0px; background: url('./img/102422.png') no-repeat; background-size: 190px 113px;"  class="lImg"></span>
                 </div>
                 <div class="topR">
                     <div class="rNav">
